2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_update_description): slightly change
	the code layout in hoping that intltool will now pick up the
	translation hint...

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't mark padding strings for translation
	and add translation comments for the pixel order strings (bug #502087)

2007-11-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* theme-installer.c: (gnome_theme_installer_run): make "Open" the
	default action for the file choosers (bug #500091)

2007-11-22  Frederic Crozat  <fcrozat@mandriva.com>

	* gnome-wp-item.c: Fix detection of image mimetype (bug #498980)

2007-11-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init): add shortcut for
	/usr/share/backgrounds to background file chooser and also consider it
	when setting the initial directory (bug #497807)

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (changed_on_disk_cb):
	* appearance-themes.c: (theme_changed_on_disk_cb): adapt to modified
	theme change callback

2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_color_changed), (wp_props_wp_set):
	* gnome-wp-item.c: (gnome_wp_item_new), (gnome_wp_item_free),
	(gnome_wp_item_dup):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml), (gnome_wp_xml_save_list):
	be more careful when reading background information from GConf and make
	sure we don't choke on NULL values later on (bug #492903)

2007-11-01  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Joel Pfaff <joel.pfaff@gmail.com>

	* appearance-themes.c: (themes_init): fix build without libXcursor

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_installer_run): revert last patch,
	it's just too ugly as long as the "one dialog per installed file" issue
	isn't fixed

2007-10-30  Jens Granseuer  <jensgr@gmx.net>
